[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/fonts/archivo-narrow/ArchivoNarrow-Bold.otf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/themes/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/images/category_images/art.png" type="Texture" id=3]
[ext_resource path="res://components/fx_box/answer_fx_box.gd" type="Script" id=4]
[ext_resource path="res://components/fx_box/correct_fx.gd" type="Script" id=6]
[ext_resource path="res://components/fx_box/animated_butterfly.tres" type="SpriteFrames" id=7]

[sub_resource type="Shader" id=11]

[sub_resource type="ShaderMaterial" id=12]
shader = SubResource( 11 )

[sub_resource type="DynamicFont" id=10]
size = 61
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=13]
resource_name = "correct"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.560784, 1, 0.721569, 1 ), Color( 0.290196, 0.666667, 1, 1 ), Color( 0.560784, 1, 0.721569, 1 ), Color( 0.290196, 0.666667, 1, 1 ), Color( 0.560784, 1, 0.721569, 1 ) ]
}

[sub_resource type="Gradient" id=14]
colors = PoolColorArray( 0, 0, 0, 0.588235, 0, 0.554688, 1, 1 )

[sub_resource type="GradientTexture" id=15]
gradient = SubResource( 14 )

[sub_resource type="DynamicFont" id=4]
size = 61
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 47
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.953781 )
colors = PoolColorArray( 0.180392, 0.203922, 0.270588, 0.729412, 0, 0.546875, 0.495605, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 7 )

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0, 0.953781 )
colors = PoolColorArray( 0, 0, 0, 0.588235, 1, 0.1875, 0, 1 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 8 )

[node name="fx_box" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="correct_fx" type="Node2D" parent="."]

[node name="CPUParticles2D" type="CPUParticles2D" parent="correct_fx"]
position = Vector2( 301, 324 )
emitting = false
amount = 50
lifetime = 2.0
one_shot = true
explosiveness = 0.52
texture = ExtResource( 3 )
emission_shape = 1
emission_sphere_radius = 128.0
spread = 45.14
gravity = Vector2( 0, -93 )
radial_accel = 27.03
scale_amount = 0.3

[node name="correct_answer" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="correct_answer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="main_msg" type="Label" parent="correct_answer/VBoxContainer"]
modulate = Color( 0.560784, 1, 0.721569, 1 )
material = SubResource( 12 )
margin_right = 600.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 10 )
text = "Correct!"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="correct_answer/VBoxContainer/main_msg"]
autoplay = "correct"
anims/correct = SubResource( 13 )

[node name="score" type="Label" parent="correct_answer/VBoxContainer"]
visible = false
margin_top = 66.0
margin_right = 600.0
margin_bottom = 99.0
text = "Score: 00"
align = 1

[node name="TextureRect" type="TextureRect" parent="correct_answer"]
modulate = Color( 0.282353, 1, 0.858824, 1 )
self_modulate = Color( 1, 1, 1, 0.407843 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = SubResource( 15 )
expand = true

[node name="final_correct" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="final_correct"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="main_msg" type="Label" parent="final_correct/VBoxContainer"]
margin_right = 600.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 4 )
text = "Quiz Complete!"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="final_correct/VBoxContainer"]
margin_top = 75.0
margin_right = 600.0
margin_bottom = 441.0
theme = ExtResource( 2 )

[node name="quiz_complete_msg" type="Label" parent="final_correct/VBoxContainer/VBoxContainer"]
margin_right = 600.0
margin_bottom = 54.0
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 9 )
text = "Great Werk!"
align = 1

[node name="score" type="Label" parent="final_correct/VBoxContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 600.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 9 )
text = "Score: 00"
align = 1

[node name="Panel" type="Panel" parent="final_correct/VBoxContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 600.0
margin_bottom = 366.0
rect_min_size = Vector2( 0, 250 )
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="final_correct/VBoxContainer/VBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="restart" type="Button" parent="final_correct/VBoxContainer/VBoxContainer/Panel/VBoxContainer"]
visible = false
margin_right = 600.0
margin_bottom = 50.0
rect_min_size = Vector2( 150, 50 )
text = "Restart Quiz"

[node name="main_menu" type="Button" parent="final_correct/VBoxContainer/VBoxContainer/Panel/VBoxContainer"]
margin_right = 600.0
margin_bottom = 50.0
rect_min_size = Vector2( 150, 50 )
text = "Main Menu"

[node name="TextureRect" type="TextureRect" parent="final_correct"]
self_modulate = Color( 1, 1, 1, 0.894118 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = SubResource( 3 )
expand = true

[node name="incorrect" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="incorrect"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="main_msg" type="Label" parent="incorrect/VBoxContainer"]
margin_right = 600.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 4 )
text = "Incorrect"
align = 1

[node name="score" type="Label" parent="incorrect/VBoxContainer"]
visible = false
margin_top = 66.0
margin_right = 600.0
margin_bottom = 99.0
text = "Score: 00"
align = 1

[node name="TextureRect" type="TextureRect" parent="incorrect"]
self_modulate = Color( 1, 1, 1, 0.533333 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = SubResource( 6 )
expand = true

[node name="die_timer" type="Timer" parent="."]
one_shot = true

[node name="correct_fx2" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="Sprite" type="AnimatedSprite" parent="correct_fx2"]
position = Vector2( 234, 341 )
scale = Vector2( 0.181184, 0.181184 )
frames = ExtResource( 7 )
frame = 1
speed_scale = 6.0
playing = true

[connection signal="pressed" from="final_correct/VBoxContainer/VBoxContainer/Panel/VBoxContainer/main_menu" to="." method="_on_main_menu_pressed"]
[connection signal="timeout" from="die_timer" to="." method="_on_die_timer_timeout"]
